Fixed crash issue caused by List.of that was present in 1.5.1